--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite": "^4.3.2"
   },
   "dependencies": {
+    "@types/node": "^20.1.7",
     "bootstrap": "^5.3.0-alpha3",
     "bootstrap-icons": "^1.10.5",
     "openai": "^3.2.1"
