--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,5 +46,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          OPENAI_API_KEY: {{secrets.OPENAI_API_KEY}}
+          OPENAI_API_KEY: ${{secrets.OPENAI_API_KEY}}
           publish_dir: ./dist
