bug fix deploy.yml unexpected inputs
https://www.paigeniedringhaus.com/blog/use-secret-environment-variables-in-git-hub-actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,8 +43,9 @@ jobs:
           path: ./dist
 
       - name: Deploy to GitHub Pages
+        env:OPENAI_API_KEY: ${{secrets.OPENAI_API_KEY}}
+
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          OPENAI_API_KEY: ${{secrets.OPENAI_API_KEY}}
+          github_token: ${{ secrets.GITHUB_TOKEN }}     
           publish_dir: ./dist
