--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,8 +43,8 @@ jobs:
           path: ./dist
 
       - name: Deploy to GitHub Pages
-        env:OPENAI_API_KEY: ${{secrets.OPENAI_API_KEY}}
-
+        env:
+          OPENAI_API_KEY: ${{secrets.OPENAI_API_KEY}}
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}     
